--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,9 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
     </head>
-    <body>
+    <body align='center'>
         {% block body %}{% endblock %}
     </body>
 </html>
