--- a/templates/customers/index.html.twig
+++ b/templates/customers/index.html.twig
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_customers_new') }}">Create new</a>
+    <a class="snip1582" href="{{ path('app_customers_new') }}">Create new</a>
 {% endblock %}
