--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,2 +1,17 @@
-hi
-<a> asdasd</a>
+<!DOCTYPE html>
+<head>
+    <title> TTP SHOP</title>
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
+</head>
+<body align=center>
+    <div class="container">
+    <a href="https://webcoban.vn"><span>Web Cơ Bản</span></a>
+    <span onclick="search()"><i class="fa fa-search"></i></span>
+    <span onclick="category()" class="fa fa-bars fa-lg"></span>
+    </div>
+    <a class='button1' href='/products'>Products</a>
+</body>
+ </html>
