--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -27,6 +27,10 @@
                 <th>Qty</th>
                 <td>{{ product.qty }}</td>
             </tr>
+            <tr>
+                <th>Img</th>
+                <td>{{ product.img }}</td>
+            </tr>
         </tbody>
     </table>
 
