UPLOAD ADMIN PAGE

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,779 +1,70 @@
-@charset "utf-8";
-/* CSS Document */
+@import 'https://fonts.googleapis.com/css?family=Raleway';
 
-body {
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: top;
-    width: 0 auto;
-    height: 0 auto;
-    background-color: white;
-    font-family: 'Barlow Condensed', sans-serif;
-    letter-spacing: 0.05em;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
+html, body
+{
+    margin: 0px;
 }
-
-.container {
-    -webkit-text-size-adjust: 100%;
-    font-family: 'Noto Serif';
-    font-size: 16px;
-    color: #73ff00;
-    margin: 0px auto;
-    padding: 0px 5px;
-    height: 92px;
-    position: relative;
-    max-width: 1240px;
-}
-.frame {
+header
+{
+    font-family: Raleway;
     margin: 0 auto;
-    width: 1000px;
+	padding: 5em 3em;
+	text-align: center;
+    background: #555;
+}
+div.container
+{
+    font-family: Raleway;
+    margin: 0 auto;
+	padding: 10px 3px;
+	text-align: center;
 }
 
-img {
-    border: none;
-}
-
-a {
-    color: #666;
+div.container a
+{
+    color: #FFF;
     text-decoration: none;
-}
-
-    a:hover {
-        color: #0066FF;
-    }
-
-p {
-    font-size: 20px;
-}
-
-
-.top_banner {
-    background: url(../img/banner2.png);
-    height: 200px;
-    opacity: 0.8;
-}
-
-.logo {
-    width: 158px;
-    float: left;
-}
-
-    .logo img {
-        margin-top: 20px;
-        margin-left: 20px;
-    }
-
-.shoppingcart {
-    width: 180px;
-    font-family: 'Barlow Condensed', sans-serif;
-    margin-top: 10px;
-    margin-right: 10px;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-size: 15px;
-    float: right;
-    border: dashed 1px;
-    border-radius: 5px;
-    background-color: antiquewhite;
-}
-
-.main_menu {
-    width: 1000px;
-    height: 0 auto;
-    background-color: black;
-    opacity: 0.8;
-}
-
-.menutext {
-    text-align: center;
-    margin-top: 10px;
-    color: #FFFFFF;
-    font-size: 13px;
-}
-
-.space {
-    height: 38px;
-    width: 1000px;
-    background-color: #0066CC;
-}
-
-.space2 {
-    margin-top: 10px;
-}
-
-.space3 {
-    margin-top: 5px;
-}
-
-.main_body {
-}
-
-.menupanel {
-    width: 220px;
-    float: left;
-}
-
-.bodypanel {
-    float: right;
-}
-
-    .bodypanel .topbanner {
-        margin-left: 15px;
-        border: solid 3px;
-        border-radius: 3px;
-        width: 706px;
-        height: 306px;
-    }
-
-.submenu {
-    width: 220px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: white;
-    color: white;
-}
-
-.submenu2 {
-    padding: 15px;
-    width: 220px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: white;
-    color: white;
-}
-
-.menutitle {
-    font-family: 'Orbitron', sans-serif;
-    margin-left: 10px;
-    width: 186px;
-    height: 48px;
-}
-
-.search {
-    margin-top: 10px;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 20px;
-}
-
-.menutitle .text {
-    margin-left: 15px;
-    color: white;
-}
-
-    .menutitle .text .text2 {
-        font-family: 'Orbitron', sans-serif;
-        margin-top: 5px;
-        float: left;
-        color: white;
-        font-size: 1em;
-        font-size: 20px;
-    }
-
-    .menutitle .text .text3 {
-        font-family: 'Orbitron', sans-serif;
-        float: left;
-        font-size: 1em;
-        font-size: 16px;
-        color: white;
-    }
-
-
-@import url(https://fonts.googleapis.com/css?family=BenchNine:700);
-
-.snip1582 {
-    background-color: #252323;
-    border: none;
-    color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 1em;
-    font-size: 13px;
-    line-height: 1em;
-    margin: 8px 2px;
-    outline: none;
-    padding: 1px 15px 1px;
-    padding-top: 5px;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
     position: relative;
-    text-transform: uppercase;
-    font-weight: 900;
-    width: 190px;
-    height: 25px;
+    z-index: 0;
+    cursor: pointer;
 }
 
-    .snip1582:before,
-    .snip1582:after {
-        border-color: transparent;
-        -webkit-transition: all 0.25s;
-        transition: all 0.2s;
-        border-style: solid;
-        border-width: 0;
-        content: "";
-        height: 15px;
-        position: absolute;
-        width: 35px;
-    }
-
-    .snip1582:before {
-        border-color: cornflowerblue;
-        border-top-width: 2px;
-        left: 0px;
-        top: -5px;
-    }
-
-    .snip1582:after {
-        border-bottom-width: 2px;
-        border-color: #c47135;
-        bottom: -5px;
-        right: 0px;
-    }
-
-    .snip1582:hover,
-    .snip1582.hover {
-        background-color: #c47135;
-    }
-
-        .snip1582:hover:before,
-        .snip1582.hover:before,
-        .snip1582:hover:after,
-        .snip1582.hover:after {
-            height: 100%;
-            width: 100%;
-        }
-
-.submenutext {
-    margin-left: 8px;
-    margin-top: 1px;
+.green
+{
+    background: #d400e7;
 }
-
-.description .image {
-    text-align: center;
-    margin-top: 5px;
-}
-
-.description .text {
-    margin-top: 5px;
-    font-size: 25px;
-    text-align: center;
-}
-
-.description .price {
-    margin-top: 5px;
-    text-align: center;
-    font-size: 25px;
-    color: #FF3300;
-    font: bold;
-}
-
-.products {
-    margin-top: 30px;
-    color: white;
-    border: solid 3px;
-    border-radius: 3px;
-    padding: 20px;
-}
-
-.item {
-    float: left;
-}
-
-.footer {
-    margin-top: 10px;
-}
-
-    .footer .paypal {
-        width: 230px;
-        text-align: center;
-        float: left
-    }
-
-    .footer .rightpanel {
-        float: right;
-        margin-left: 30px;
-    }
-
-.copyright {
-    margin-top: 5px;
-    text-align: right;
-    font-size: 10px;
-}
-
-.product_table {
-    margin-left: 10px;
-    font-size: 18px;
-}
-
-.polices_text {
-    width: 700px;
-}
-
-    .polices_text p {
-        margin-bottom: 0px;
-    }
-
-
-.textprice {
-    color: #FF3300;
-    font-size: 25px;
-}
-
-.footer .rightpanel .menu a {
-    color: #999999;
-    text-decoration: none;
-}
-
-    .footer .rightpanel .menu a:hover {
-        color: #0066FF;
-    }
-
-.footer .menu {
-    text-align: right;
-}
-
-.contactinfo {
-    margin-left: 10px;
-}
-
-h3 {
-    margin-top: 0px;
-    margin-left: 10px;
-    font-size: 12px;
-}
-
-form {
-    margin: 0px 0px 0px 0px;
-}
-
-.logout {
-    text-align: right;
-    margin-right: 20px;
-}
-
-    .logout a {
-        text-decoration: underline;
-    }
-
-.rightline {
-    border-right: 1px solid #CCCCCC;
-    font-size: 18px;
-}
-
-.pagenumber {
-    width: 700px;
-    text-align: center;
-    font-size: 24px;
-}
-
-    .pagenumber a {
-        color: white;
-        text-decoration: underline;
-        font-size: 24px;
-    }
-
-        .pagenumber a:hover {
-            color: #CC0000;
-            font-size: 24px;
-        }
-
-.productname a {
-    color: #666666;
-    text-decoration: underline;
-}
-
-    .productname a:hover {
-        color: #CC0000;
-    }
-
-.findform {
-    text-align: center;
-}
-
-.invoice {
-    text-decoration: none;
-}
-
-.invoiceleft {
-    float: left;
-    width: 300px;
-}
-
-.invoiceright {
-    float: right;
-    width: 250px;
-}
-
-.invoicetext {
-    text-align: center;
-    background-color: #1e93c9;
-    color: #FFFFFF;
-    margin: 5px;
-    padding: 5px;
-}
-
-.btn1:after, .btn1:before {
-    content: '';
+div.topBotomBordersOut a:before, div.topBotomBordersOut a:after
+{
     position: absolute;
-    z-index: -2;
-    transition-property: inherit;
-    transition-duration: inherit;
-    transition-timing-function: inherit;
-}
-
-.btn {
-    position: relative;
-    display: inline-block;
-    box-shadow: none;
-    background-color: black;
-    color: #fff;
-    padding: 0 30px;
-    line-height: 2em;
-    height: 4em;
-    white-space: nowrap;
-    min-width: 50px;
-    z-index: 8;
-    overflow: hidden;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: .2em;
-    transition-property: all;
-    transition-duration: 0.6s;
-    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.btn1:after, .btn1:before {
-    width: 0;
-    height: 100%;
-    top: 0;
-    left: 100%;
-    background-color: black;
-}
-
-.btn1:before {
-    z-index: -1;
-    background-color: #5e9dce;
-}
-
-.btn1:after {
-    transition-delay: .2s;
-}
-
-.btn1:hover:after, .btn1:hover:before {
+    left: 0px;
     width: 100%;
-    left: 0;
-    transition-property: width;
-}
-
-.btn1:hover:before {
-    transition-delay: .2s;
-}
-
-.btn1:hover:after {
-    transition-property: width;
-    transition-delay: 0s;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-form.find input[type=text] {
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-}
-
-form.find button {
-    float: left;
-    width: 20%;
-    height: 42px;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-}
-
-    form.find button:hover {
-        background: #0b7dda;
-    }
-
-form.find::after {
+    height: 2px;
+    background: #FFF;
     content: "";
-    clear: both;
-    display: table;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+div.topBotomBordersOut a:before
+{
+    top: 0px;
+    transform: translateY(10px);
+}
+
+div.topBotomBordersOut a:after
+{
+    bottom: 0px;
+    transform: translateY(-10px);
+}
+
+div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
+{
+    opacity: 1;
+    transform: translateY(0px);
 }
 
 
-.slideshow {
-    overflow: hidden;
-    height: 300px;
-    width: 700px;
-    margin: 0 auto;
-}
 
-.slide-wrapper {
-    width: 2912px;
-    -webkit-animation: slide 14s ease infinite;
-}
-
-.slide {
-    float: left;
-    height: 300px;
-    width: 700px;
-}
-
-
-@-webkit-keyframes slide {
-    20% {
-        margin-left: 0px;
-    }
-
-    30% {
-        margin-left: -700px;
-    }
-
-    50% {
-        margin-left: -700px;
-    }
-
-    60% {
-        margin-left: -1400px;
-    }
-
-    80% {
-        margin-left: -1400px;
-    }
-}
-
-@import url(https://fonts.googleapis.com/css?family=Raleway:400);
-
-.button2 {
-    font-family: 'Raleway', Arial, sans-serif;
-    border: none;
-    background-color: #5666a5;
-    border-radius: 5px;
-    color: #ffffff;
-    cursor: pointer;
-    padding: 0px 30px;
-    display: inline-block;
-    margin: 15px 30px;
-    text-transform: uppercase;
-    line-height: 46px;
-    font-weight: 400;
-    font-size: 1em;
-    outline: none;
-    position: relative;
-    overflow: hidden;
-    font-size: 16px;
-    border-radius: 23px;
-    letter-spacing: 2px;
-    -webkit-transform: translateZ(0);
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-    .button2:before {
-        opacity: 0;
-        content: "";
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        border-radius: inherit;
-        background-color: #ffffff;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
-        -webkit-transform: translateY(100%);
-        transform: translateY(100%);
-    }
-
-    .button2:after {
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        border: 5px solid #5666a5;
-        content: '';
-        border-radius: inherit;
-    }
-
-    .button2:hover,
-    .button2.hover {
-        background-color: #5666a5;
-        color: #ffffff;
-    }
-
-        .button2:hover:before,
-        .button2.hover:before {
-            -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-            opacity: 0.25;
-        }
-.button3 {
-    background-color: red;
-    border: none;
-    color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Raleway', Arial, sans-serif;
-    font-size: 1em;
-    font-size: 10px;
-    line-height: 1em;
-    margin: 8px 2px;
-    outline: none;
-    padding: 1px 1px 1px;
-    padding-top: 1px;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: 900;
-    width: 78px;
-    height: 18px;
-}
-
-    .button3:before,
-    .button3:after {
-        border-color: transparent;
-        -webkit-transition: all 0.25s;
-        transition: all 0.2s;
-        border-style: solid;
-        border-width: 0;
-        content: "";
-        height: 15px;
-        position: absolute;
-        width: 35px;
-    }
-
-    .button3:before {
-        border-color: #c47135;
-        border-top-width: 2px;
-        left: 0px;
-        top: -5px;
-    }
-
-    .button3:after {
-        border-bottom-width: 2px;
-        border-color: blue;
-        bottom: -5px;
-        right: 0px;
-    }
-
-    .button3:hover,
-    .button3.hover {
-        background-color: #c47135;
-    }
-
-        .button3:hover:before,
-        .button3.hover:before,
-        .button3:hover:after,
-        .button3.hover:after {
-            height: 100%;
-            width: 100%;
-        }
-.button4 {
-    background-color: blueviolet;
-    border: none;
-    color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Raleway', Arial, sans-serif;
-    font-size: 1em;
-    font-size: 10px;
-    line-height: 1em;
-    margin: 8px 2px;
-    outline: none;
-    padding: 1px 1px 1px;
-    padding-top: 1px;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: 900;
-    width: 78px;
-    height: 18px;
-}
-
-    .button4:before,
-    .button4:after {
-        border-color: transparent;
-        -webkit-transition: all 0.25s;
-        transition: all 0.2s;
-        border-style: solid;
-        border-width: 0;
-        content: "";
-        height: 15px;
-        position: absolute;
-        width: 35px;
-    }
-
-    .button4:before {
-        border-color: blue;
-        border-top-width: 2px;
-        left: 0px;
-        top: -5px;
-    }
-
-    .button4:after {
-        border-bottom-width: 2px;
-        border-color: #c47135;
-        bottom: -5px;
-        right: 0px;
-    }
-
-    .button4:hover,
-    .button4.hover {
-        background-color: darkblue;
-    }
-
-        .button4:hover:before,
-        .button4.hover:before,
-        .button4:hover:after,
-        .button4.hover:after {
-            height: 100%;
-            width: 100%;
-        }
-.button5 {
-    background-color: deepskyblue;
-    border: none;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Raleway', Arial, sans-serif;
-    font-size: 1em;
-    font-size: 13px;
-    line-height: 1em;
-    margin: 8px 2px;
-    outline: none;
-    padding: 5px;
-    padding-top: 3px;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: 900;
-    width: 0 auto;
-    height: 18px;
-}
-    .button5:hover,
-    .button5.hover {
-        background-color: darkblue;
-    }
-
-        .button5:hover:before,
-        .button5.hover:before,
-        .button5:hover:after,
-        .button5.hover:after {
-            height: 100%;
-            width: 100%;
-        }
