--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
+        <script src="{{ app.request.basepath }}/js/script.js"></script>
+        <link rel="icon" href="img/logo.png" />
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -12,9 +13,19 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-    <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
+    
     </head>
-    <body align='center'>
-        {% block body %}{% endblock %}
+    <header>
+
+    </header>
+    <body align=center>
+    <div class="container green topBotomBordersOut">
+        <a href='/index.php'>HOME</a>
+        <a href='/products'>PRODUCTS</a>
+        <a>PORTFOLIO</a>
+        <a>ABOUT</a>
+        <a>CONTACT</a>
+    </div>
+      {% block body %}  {% endblock %}
     </body>
 </html>
