UPDATE LOGIN ADMIN
ADD LOGIN ADMIN
ADD TOO MUCH...

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
         <a href='/products'>PRODUCTS</a>
         <a>PORTFOLIO</a>
         <a>ABOUT</a>
-        <a>CONTACT</a>
+        <a align='right'>CONTACT</a>
     </div>
       {% block body %}  {% endblock %}
     </body>
