--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
-        <script src="{{ app.request.basepath }}/js/script.js"></script>
+        <script src="{{ asset('js/script.js') }}"></script>
         <link rel="icon" href="img/logo.png" />
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -15,9 +16,8 @@
         {% endblock %}
     
     </head>
-    <header>
-    </header>
-    <body align=center>
+    <body align=center>	
+    <header></header>						
     <div class="container green topBotomBordersOut">
         <a href='/index.php'>HOME</a>
         <a href='/products'>PRODUCTS</a>
@@ -25,19 +25,49 @@
         <a>ABOUT</a>
         <a align='right'>CONTACT</a>
     </div>
+    <div>
         {% for product in products %}
-            <tr>
-                <td>{{ product.id }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.details }}</td>
-                <td>{{ product.price }}</td>
-                <td>{{ product.qty }}</td>
-                <td>{{ product.img }}</td>
-            </tr>
+            <div id="make-3D-space">
+                <div id="product-card">
+                    <div id="product-front">
+                        <div class="shadow"></div>
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/t-shirt.png" alt="" />
+                        <div class="image_overlay"></div>
+                        <div id="view_details">View details</div>
+                        <div class="stats"> </div>
+                        <div class="stats-container"> </div>
+                    </div>                         
+                </div>
+            </div>
+            <div id="product-back">
+	            <div class="shadow"></div>
+                <div id="carousel">
+                    <div class="arrows-perspective">
+                        <div class="carouselPrev">
+                        <div class="y"></div>
+	                    <div class="x"></div>
+                    </div>
+                    <div class="carouselNext">
+                        <div class="y"></div>
+	                    <div class="x"></div>
+                    </div>
+                </div>
+            </div>
+            <div id="flip-back">
+            	<div id="cy"></div>
+                <div id="cx"></div>
+            </div>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        </div>	  
         {% else %}
             <tr>
                 <td colspan="7">no records found</td>
             </tr>
-        {% endfor %}
+        {% endfor %} 
+</div>
+<video id="video_background" playsinline="" autoplay="" muted="" loop="" poster="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2306810/d76c70fb5f04eab0d0d85bbab194439967377c1d.jpg">
+									<source src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2306810/47b4af9e334c1cc9d09d6ae877717a70b737c7ae.webm" type="video/webm">
+									<source src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2306810/4ec39b9d960610769f394b02b011be0bcad72bfc.mp4" type="video/mp4">
+							</video>
     </body>
 </html>
