--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,9 @@
     <div class="container green topBotomBordersOut">
         <a href='/index.php'>HOME</a>
         <a href='/index.php'>PRODUCTS</a>
-        <a href='/index.php'>CATEGORIES</a>
-        <a align='/order'>Order</a>
+        <a href='/index.php'>CATEGORIY</a>
+       <a href='/index.php'>ABOUT US</a>
+        <a href='/orders'>CHECK ORDER</a>
     </div>
         </div>
     </body>
