--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,6 @@
        <a href='/index.php'>ABOUT US</a>
         <a href='/orders'>CHECK ORDER</a>
     </div>
-        </div>
+    {% block body %}  {% endblock %}
     </body>
 </html>
